[gd_scene load_steps=8 format=2]

[ext_resource path="res://Booth/Duckling.gd" type="Script" id=1]
[ext_resource path="res://Assets/spritesheet_objects.png" type="Texture" id=2]
[ext_resource path="res://Assets/Booth/stick_wood_outline.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 60.3377

[sub_resource type="Animation" id=2]
resource_name = "fall_off"

[sub_resource type="Animation" id=3]
resource_name = "shot_down"
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.6, 0.9, 1.25, 1.65 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-005, 1 ), Vector2( 1e-005, 1 ), Vector2( 1, 1 ), Vector2( 1e-005, 1 ), Vector2( 1e-005, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.55, 0.6, 0.9, 1.25, 1.65 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, false, true, true, false, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Back:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.15, 0.35, 0.6, 1.25, 1.6, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-005, 1 ), Vector2( 1, 1 ), Vector2( 1e-005, 1 ), Vector2( 1e-005, 1 ), Vector2( 0.625004, 1 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Back:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.15, 0.55, 0.6, 0.9, 1.25, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false, false, true, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Support:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.15, 0.35, 0.6, 0.9, 1.25, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0.8 ), Vector2( 1e-005, 0.8 ), Vector2( 1, 0.8 ), Vector2( 1e-005, 0.8 ), Vector2( 1, 0.8 ), Vector2( 1e-005, 0.8 ), Vector2( 1, 0.8 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "starting_state"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Back:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Back:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[node name="Duckling" type="KinematicBody2D"]
script = ExtResource( 1 )
speed = 220
despawn_time = 6

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 418, 321, 114, 109 )

[node name="Support" type="Sprite" parent="."]
position = Vector2( 0, 100 )
scale = Vector2( 1, 0.8 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionArea" type="CollisionShape2D" parent="Area2D"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fall_off = SubResource( 2 )
anims/shot_down = SubResource( 3 )
anims/starting_state = SubResource( 4 )

[node name="Back" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.600004, 1 )
texture = ExtResource( 2 )
flip_h = true
region_enabled = true
region_rect = Rect2( 404, 581, 114, 109 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
